Fixed Accessibility issue + no scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,19 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+    html,
+  body {
+    overscroll-behavior-y: contain;
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
   }
+
+    /* Hide scrollbars */
+    ::-webkit-scrollbar {
+      display: none;
+    }
 
   .nav-item {
     @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 hover:text-white transition duration-300;
